# archway

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-tauri.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
docs/: job_desc.md
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  jobs.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: background_manager.rs  drive_manager.rs  job_manager.rs  lib.rs  log_manager.rs  main.rs  recovery_manager.rs  settings_manager.rs  storage_manager.rs  structs.rs
src/components/: JobBehavior.svelte
src/components/Dashboard/: HealthTile.svelte  JobListTile.svelte  ProgressTile.svelte  SettingsTile.svelte  StatusTile.svelte
src/components/JobSetup/: FileFilters.svelte  ImportSelect.svelte  InputSelect.svelte  JobBehavior.svelte  JobTriggers.svelte  OutputSelect.svelte
src/pages/: Dashboard.svelte  Health.svelte  JobManager.svelte  QuickSetupPage.svelte  Restore.svelte  SetUpAutomation.svelte  Settings.svelte  Status.svelte  WelcomePage.svelte
src/routes/: +layout.svelte  +page.svelte
website/: index.js  styles.css
