[package]
name = "Archway"
version = "1.1.0"
description = "Simple, human-friendly file copy and archive automation "
authors = ["Atticus Cornett"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "archway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35.1"
tauri-plugin-dialog = "2"
dirs = "6.0.0"
tauri-plugin-store = "2"
once_cell = "1.21.3"
sha2 = "0.10.9"
tauri-plugin-notification = "2"
time = { version = "0.3.41", features = ["local-offset"] }
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

